fix: format code and fix error code from branch pos-smart-flow